--- a/src/Eve-O-Preview/View/Implementation/MainForm.resx
+++ b/src/Eve-O-Preview/View/Implementation/MainForm.resx
@@ -147,6 +147,9 @@
   <metadata name="GeneralSettingsPanel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
+  <metadata name="EnableLocalizationBugSolutionCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>True</value>
+  </metadata>
   <metadata name="MinimizeInactiveClientsCheckBox.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -350,7 +353,10 @@ The program does NOT
 • display modified EVE Online interface
 • broadcast any keyboard or mouse events
 • interact with EVE Online except of;
-    - resizing or bringing it to the foreground</value>
+    - resizing or bringing it to the foreground
+
+中文 Bug 修改适配：EVEModX
+程序读取 exefile 命令行 ssoToken 解析 jwt 得到用户名，所有数据均在本地处理</value>
   </data>
   <metadata name="VersionLabel.Locked" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
